--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.4.3",
     "webpack-cli": "^4.8.0"
   }
 }
