--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,11 @@
       "target": "es5",
       "jsx": "react",
       "allowJs": true,
-      "moduleResolution": "node"
-    }
-  }
+      "moduleResolution": "node",
+      "sourceMap": true,
+      "strict": true
+    },
+    "include": [
+        "src"
+    ]
+}
