--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
   "author": "Mohamed Karara",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage --colors"
   },
   "dependencies": {
+    "enzyme-adapter-react-16": "^1.15.6",
     "html-webpack-plugin": "^5.3.2",
     "path": "^0.12.7",
     "webpack": "^5.56.0",
@@ -22,17 +26,24 @@
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
+    "@types/jest": "^27.0.2",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
+    "babel-jest": "^27.2.4",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.3.0",
+    "enzyme": "^3.11.0",
     "file-loader": "^6.2.0",
     "image-webpack-loader": "^8.0.1",
+    "jest": "^27.2.4",
+    "jest-scss-transform": "^1.0.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-test-renderer": "^17.0.2",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.3.0",
+    "ts-jest": "^27.0.5",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.3",
     "webpack-cli": "^4.8.0"
