--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
       "allowJs": true,
       "moduleResolution": "node",
       "sourceMap": true,
-      "strict": true
+      "strict": true,
+      "esModuleInterop": true
     },
     "include": [
         "src"
