--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "start": "webpack-dev-server",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage --colors"
+    "test:coverage": "jest --coverage --colors",
+    "lint": "eslint --ext .ts,.tsx",
+    "lint:fix": "eslint --ext ts,tsx src --fix",
+    "format": "prettier-eslint --write \"src/**/*.{ts,tsx,js,jsx}\""
   },
   "dependencies": {
     "enzyme-adapter-react-16": "^1.15.6",
+    "eslint": "^7.32.0",
     "html-webpack-plugin": "^5.3.2",
     "path": "^0.12.7",
     "webpack": "^5.56.0",
@@ -29,15 +33,22 @@
     "@types/jest": "^27.0.2",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "babel-jest": "^27.2.4",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.3.0",
     "enzyme": "^3.11.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-react": "^7.26.1",
     "file-loader": "^6.2.0",
     "image-webpack-loader": "^8.0.1",
     "jest": "^27.2.4",
     "jest-scss-transform": "^1.0.1",
     "node-sass": "^6.0.1",
+    "prettier": "^2.4.1",
+    "prettier-eslint": "^13.0.0",
+    "prettier-eslint-cli": "^5.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-test-renderer": "^17.0.2",
