--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^6.3.0",
     "enzyme": "^3.11.0",
-    "eslint-loader": "^4.0.2",
     "eslint-plugin-react": "^7.26.1",
+    "eslint-webpack-plugin": "^3.0.1",
     "file-loader": "^6.2.0",
     "image-webpack-loader": "^8.0.1",
     "jest": "^27.2.4",
