--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "author": "Mohamed Karara",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "webpack-dev-server --open --color --progress --config webpack.dev.js",
+    "build:prod": "webpack --color --progress --config webpack.prod.js",
+    "build:dev": "webpack --color --progress --config webpack.dev.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage --colors",
@@ -37,6 +39,7 @@
     "@typescript-eslint/parser": "^4.33.0",
     "babel-jest": "^27.2.4",
     "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.3.0",
     "enzyme": "^3.11.0",
     "eslint-plugin-react": "^7.26.1",
@@ -57,6 +60,7 @@
     "ts-jest": "^27.0.5",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.3",
-    "webpack-cli": "^4.8.0"
+    "webpack-cli": "^4.8.0",
+    "webpack-merge": "^5.8.0"
   }
 }
