--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "dependencies": {
     "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^7.32.0",
+    "google-map-react": "^2.1.10",
     "html-webpack-plugin": "^5.3.2",
     "path": "^0.12.7",
+    "react-google-places-autocomplete": "^3.3.2",
     "webpack": "^5.56.0",
     "webpack-dev-server": "^4.3.0"
   },
