--- a/package.json
+++ b/package.json
@@ -18,6 +18,14 @@
     "format": "prettier-eslint --write \"src/**/*.{ts,tsx,js,jsx}\"",
     "styleCheck": "prettier --check \"src/**/*.{ts,tsx,js,jsx}\""
   },
+  "husky": {
+    "hooks": {
+        "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx,js,jsx}": ["eslint", "prettier --check", "git add"]
+  },
   "dependencies": {
     "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^7.32.0",
@@ -48,9 +56,11 @@
     "eslint-plugin-react": "^7.26.1",
     "eslint-webpack-plugin": "^3.0.1",
     "file-loader": "^6.2.0",
+    "husky": "^7.0.2",
     "image-webpack-loader": "^8.0.1",
     "jest": "^27.2.4",
     "jest-scss-transform": "^1.0.1",
+    "lint-staged": "^11.2.0",
     "node-sass": "^6.0.1",
     "prettier": "^2.4.1",
     "prettier-eslint": "^13.0.0",
