--- a/package.json
+++ b/package.json
@@ -13,26 +13,34 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage --colors",
-    "lint": "eslint --ext .ts,.tsx,.js,.jsx",
-    "lint:fix": "eslint --ext ts,tsx,.js,.jsx src --fix",
+    "lint": "eslint '*/**/*.{js,ts,tsx}'",
+    "lint:fix": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
     "format": "prettier-eslint --write \"src/**/*.{ts,tsx,js,jsx}\"",
     "styleCheck": "prettier --check \"src/**/*.{ts,tsx,js,jsx}\""
   },
   "husky": {
     "hooks": {
-        "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
-    "src/**/*.{ts,tsx,js,jsx}": ["eslint", "prettier --check", "git add"]
+    "src/**/*.{ts,tsx,js,jsx}": [
+      "eslint",
+      "prettier --check",
+      "git add"
+    ]
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
     "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^7.32.0",
     "google-map-react": "^2.1.10",
     "html-webpack-plugin": "^5.3.2",
     "path": "^0.12.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-google-places-autocomplete": "^3.3.2",
+    "react-redux": "^7.2.5",
     "webpack": "^5.56.0",
     "webpack-dev-server": "^4.3.0"
   },
@@ -53,6 +61,10 @@
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.3.0",
     "enzyme": "^3.11.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jest": "^24.5.2",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.1",
     "eslint-webpack-plugin": "^3.0.1",
     "file-loader": "^6.2.0",
@@ -65,8 +77,6 @@
     "prettier": "^2.4.1",
     "prettier-eslint": "^13.0.0",
     "prettier-eslint-cli": "^5.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "react-test-renderer": "^17.0.2",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.3.0",
