--- a/package.json
+++ b/package.json
@@ -32,19 +32,19 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
-    "enzyme-adapter-react-16": "^1.15.6",
-    "eslint": "^7.32.0",
     "google-map-react": "^2.1.10",
-    "html-webpack-plugin": "^5.3.2",
-    "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-places-autocomplete": "^3.3.2",
-    "react-redux": "^7.2.5",
-    "webpack": "^5.56.0",
-    "webpack-dev-server": "^4.3.0"
+    "react-redux": "^7.2.5"
   },
   "devDependencies": {
+    "path": "^0.12.7",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "eslint": "^7.32.0",
+    "html-webpack-plugin": "^5.3.2",
+    "webpack": "^5.56.0",
+    "webpack-dev-server": "^4.3.0",
     "@babel/core": "^7.15.5",
     "@babel/node": "^7.15.4",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
