--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     ]
   },
   "dependencies": {
+    "@reach/combobox": "^0.16.1",
+    "@react-google-maps/api": "^2.4.1",
     "@reduxjs/toolkit": "^1.6.2",
     "google-map-react": "^2.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-google-places-autocomplete": "^3.3.2",
-    "react-redux": "^7.2.5"
+    "react-redux": "^7.2.5",
+    "use-places-autocomplete": "^1.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
@@ -54,6 +56,7 @@
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.3.0",
+    "dotenv": "^10.0.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^7.32.0",
