--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test:coverage": "jest --coverage --colors",
     "lint": "eslint '*/**/*.{js,ts,tsx}'",
     "lint:fix": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
-    "format": "prettier --write '*/**/*.{js,ts,tsx}'",
+    "format": "prettier-eslint --write '*/**/*.{js,ts,tsx}'",
     "styleCheck": "prettier --check '*/**/*.{js,ts,tsx}'"
   },
   "husky": {
@@ -76,6 +76,8 @@
     "node-sass": "^6.0.1",
     "path": "^0.12.7",
     "prettier": "^2.4.1",
+    "prettier-eslint": "^13.0.0",
+    "prettier-eslint-cli": "^5.0.1",
     "react-test-renderer": "^17.0.2",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.3.0",
