--- a/package.json
+++ b/package.json
@@ -69,9 +69,10 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "husky": "^7.0.2",
+    "identity-obj-proxy": "^3.0.0",
     "image-webpack-loader": "^8.0.1",
     "jest": "^27.2.4",
-    "jest-scss-transform": "^1.0.1",
+    "jest-transform-css": "^2.1.0",
     "lint-staged": "^11.2.0",
     "node-sass": "^6.0.1",
     "path": "^0.12.7",
