--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test:coverage": "jest --coverage --colors",
     "lint": "eslint '*/**/*.{js,ts,tsx}'",
     "lint:fix": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
-    "format": "prettier --write '*/**/*.{js,ts,tsx}'",
+    "format": "prettier-eslint --write '*/**/*.{js,ts,tsx}'",
     "styleCheck": "prettier --check '*/**/*.{js,ts,tsx}'"
   },
   "husky": {
@@ -31,12 +31,14 @@
     ]
   },
   "dependencies": {
+    "@reach/combobox": "^0.16.1",
+    "@react-google-maps/api": "^2.4.1",
     "@reduxjs/toolkit": "^1.6.2",
     "google-map-react": "^2.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-google-places-autocomplete": "^3.3.2",
-    "react-redux": "^7.2.5"
+    "react-redux": "^7.2.5",
+    "use-places-autocomplete": "^1.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
@@ -54,6 +56,7 @@
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.3.0",
+    "dotenv": "^10.0.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^7.32.0",
@@ -66,13 +69,16 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "husky": "^7.0.2",
+    "identity-obj-proxy": "^3.0.0",
     "image-webpack-loader": "^8.0.1",
     "jest": "^27.2.4",
-    "jest-scss-transform": "^1.0.1",
+    "jest-transform-css": "^2.1.0",
     "lint-staged": "^11.2.0",
     "node-sass": "^6.0.1",
     "path": "^0.12.7",
     "prettier": "^2.4.1",
+    "prettier-eslint": "^13.0.0",
+    "prettier-eslint-cli": "^5.0.1",
     "react-test-renderer": "^17.0.2",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.3.0",
