added markers to update on input change

--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,5 @@
     parser: "typescript",
     singleQuote: false,
     trailingComma: "none",
-    bracketSpacing: true
-}
+    bracketSpacing: true,
+}   
