added submit trip functionality

--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "@reach/combobox": "^0.16.1",
     "@react-google-maps/api": "^2.4.1",
     "@reduxjs/toolkit": "^1.6.2",
+    "axios": "^0.23.0",
     "google-map-react": "^2.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.27.0",
     "react-redux": "^7.2.5",
     "use-places-autocomplete": "^1.9.4"
   },
